base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: atlantis
    release: atlantis
  name: atlantis
spec:
  ports:
  - name: atlantis
    port: 80
    protocol: TCP
    targetPort: 4141
  selector:
    app: atlantis
    release: atlantis
  type: NodePort
